--- a/src/Login.css
+++ b/src/Login.css
@@ -54,6 +54,14 @@ a {
     align-items: center;
 }
 
+.login-content {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .login-text {
     width: 829px;
     height: 63px;
