--- a/src/Main.css
+++ b/src/Main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+
 .app {
   height: 100vh; /* Set the app height to 100% of the viewport height */
   display: flex;
@@ -23,35 +25,40 @@
   height: 50px;
 }
 
+.siteName {
+    font: 1.2rem 'Fira Code';
+    color:  #B2DAFE;
+}
+
 .button-container {
-  display: flex;
+    display: flex;
 }
 
 .button {
-  margin-left: 10px; /* Adjust spacing between buttons */
-  padding: 8px 16px; /* Adjust padding as needed */
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  color: #081B33; /* Set text color for normal state */
-  background-color: #B2DAFE;
+    margin: 0 10px; /* Adjust spacing between buttons */
+    padding: 8px 16px; /* Adjust padding as needed */
+    border: 1px solid #B2DAFE;
+    cursor: pointer;
+    color: #B2DAFE; /* Set text color for normal state */
+    background-color: transparent;
+    fontFamily: 'Fira Code'
+}
+
+.button:hover {
+    border: 1px solid #82C4FF;
+    color: #82C4FF;
+}
+
+.button:active {
+    border: 1px solid #6AB9FF;
+    color: #6AB9FF;
 }
 
 .button:disabled {
-  opacity: 0.5; /* Adjust opacity for disabled state */
-  background-color: #3B424A;
-  color: #A1A1A1;
-  cursor: not-allowed;
-}
-
-.button.focused {
-  background-color: #82C4FF; /* Set focused state color */
-  color: #081B33;
-}
-
-.button.pressed {
-  background-color: #6AB9FF; /* Set pressed state color */
-  color: #081B33;
+    opacity: 0.5; /* Adjust opacity for disabled state */
+    background-color: #4F6170;
+    color: #92bcef;
+    cursor: not-allowed;
 }
 
 .main-content {
@@ -59,13 +66,13 @@
   flex: 1; /* This ensures the main content area takes up the remaining space */
 }
 
-.left-block {
+.main-left-block {
   flex: 6; /* Take 1 part out of 4 (1:3 proportion) */
   background-color: #21262D; /* Adjust background color as needed */
   padding: 20px; /* Adjust padding as needed */
 }
 
-.right-block {
+.main-right-block {
   flex: 19; /* Take 3 parts out of 4 (1:3 proportion) */
   background-color: #161B22; /* Adjust background color as needed */
   padding: 20px; /* Adjust padding as needed */
@@ -73,7 +80,7 @@
   flex-direction: column;
 }
 
-.buttonStyle {
+.main-button-style {
   background: transparent;
   color: white;
   border: 0px solid #000;
@@ -81,12 +88,12 @@
   cursor: pointer;
 }
 
-.textarea {
+.main-textarea {
   flex: 1; /* Allow the textarea to expand and fill the available space */
   border: none; /* Remove the default textarea border */
   background-color: inherit; /* Inherit the parent's background color */
   resize: none; /* Disable textarea resizing if necessary */
   outline: none; /* Remove the default outline on focus (optional) */
-  font: 1.2rem "JetBrains Mono";
+  font: 1.2rem 'Fira Code';
   color: white;
 }
