--- a/src/Home.css
+++ b/src/Home.css
@@ -5,10 +5,10 @@
     display: flex;
     flex-direction: column;
     /*background-image: url("../public/background.jpg");*/
-    background: linear-gradient(rgba(0, 0, 20, 0.8), rgba(0, 0, 20, 0.8)), url("../public/background.jpg");
+    background: linear-gradient(rgba(0, 0, 20, 0.78), rgba(0, 0, 20, 0.78)), url("../public/background.jpg");
     background-size: cover;
-    /*opacity: 0.5;
-    filter: brightness(0.5);*/
+    /*opacity: 0.8;*/
+    /*filter: brightness(0.5);*/
 }
 
 .home-header {
@@ -40,13 +40,13 @@
 }
 
 .home-button {
-    margin: 0 10px; /* Adjust spacing between buttons */
-    padding: 8px 16px; /* Adjust padding as needed */
+    margin: 0 4px;
+    padding: 8px 16px;
     border: 1px solid #B2DAFE;
     cursor: pointer;
-    color: #B2DAFE; /* Set text color for normal state */
+    color: #B2DAFE;
     background-color: transparent;
-    fontFamily: 'Fira Code'
+    font: 1rem 'Fira Code';
 }
 
 .home-button:hover {
@@ -60,6 +60,36 @@
 }
 
 .home-button:disabled {
+    opacity: 0.5; /* Adjust opacity for disabled state */
+    background-color: #4F6170;
+    color: #92bcef;
+    cursor: not-allowed;
+}
+
+.home-button-center {
+    width: 436px;
+    height: 85px;
+    border-radius: 30px;
+    margin: 0 30px; /* Adjust spacing between buttons */
+    padding: 8px 16px; /* Adjust padding as needed */
+    border: 4px solid #B2DAFE;
+    cursor: pointer;
+    color: #B2DAFE; /* Set text color for normal state */
+    background-color: transparent;
+    font: 2.8rem 'Fira Code';
+}
+
+.home-button-center:hover {
+    border: 1px solid #82C4FF;
+    color: #82C4FF;
+}
+
+.home-button-center:active {
+    border: 1px solid #6AB9FF;
+    color: #6AB9FF;
+}
+
+.home-button-center:disabled {
     opacity: 0.5; /* Adjust opacity for disabled state */
     background-color: #4F6170;
     color: #92bcef;
