--- a/src/Main.css
+++ b/src/Main.css
@@ -72,6 +72,27 @@
   padding: 20px; /* Adjust padding as needed */
 }
 
+.main-list-item {
+    display: flex;
+    alignItems: center;
+}
+
+.main-list-button {
+    background-color: transparent;
+    color: white;
+    border: transparent;
+}
+
+.main-list-text {
+    color: white;
+    align-content: center;
+    display: flex;
+    justify-content: center; /* Center text vertically */
+    align-items: center;
+    font: 1rem 'Fira Code';
+
+}
+
 .main-right-block {
   flex: 19; /* Take 3 parts out of 4 (1:3 proportion) */
   background-color: #161B22; /* Adjust background color as needed */
