--- a/src/Home.css
+++ b/src/Home.css
@@ -82,11 +82,13 @@
 .home-button-center:hover {
     border: 1px solid #82C4FF;
     color: #82C4FF;
+    border: 4px solid #B2DAFE;
 }
 
 .home-button-center:active {
     border: 1px solid #6AB9FF;
     color: #6AB9FF;
+    border: 4px solid #B2DAFE;
 }
 
 .home-button-center:disabled {
@@ -94,6 +96,7 @@
     background-color: #4F6170;
     color: #92bcef;
     cursor: not-allowed;
+    border: 4px solid #B2DAFE;
 }
 
 .home-content {
