--- a/frontend/src/Main.css
+++ b/frontend/src/Main.css
@@ -10,19 +10,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #081B33; /* Set your background color */
+  background-color: #252E39; /* Set your background color */
   color: white; /* Set your text color */
 }
 
 .icon-container {
-  margin-right: 10px; /* Adjust as needed */
-  display: flex;
-  alignItems: center;
+    margin-left: 7px;
+    display: flex;
+    align-items: center;
 }
 
 .icon {
   width: 50px; /* Adjust icon size */
   height: 50px;
+    margin-left: 12px;
 }
 
 .siteName {
@@ -35,7 +36,7 @@
 }
 
 .button {
-    margin: 0 10px; /* Adjust spacing between buttons */
+    margin: 0 3px; /* Adjust spacing between buttons */
     padding: 8px 16px; /* Adjust padding as needed */
     border: 1px solid #B2DAFE;
     cursor: pointer;
@@ -69,22 +70,29 @@
 .main-left-block {
   flex: 6; /* Take 1 part out of 4 (1:3 proportion) */
   background-color: #21262D; /* Adjust background color as needed */
-  padding: 20px; /* Adjust padding as needed */
+  padding-left: 10px; /* Adjust padding as needed */
 }
 
 .main-list-item {
     display: flex;
-    alignItems: center;
+}
+
+.main-list-item:hover {
+    display: flex;
+    background-color:  #252E39;
+}
+
+.main-list-item:hover + .button-points, .button-points:hover {
 }
 
 .main-list-button {
     background-color: transparent;
-    color: white;
+    color: #B2DAFE;
     border: transparent;
 }
 
 .main-list-text {
-    color: white;
+    color: #B2DAFE;
     align-content: center;
     display: flex;
     justify-content: center; /* Center text vertically */
