--- a/frontend/src/Project.css
+++ b/frontend/src/Project.css
@@ -64,13 +64,17 @@
 
 .main-content {
   display: flex;
-  flex: 1; /* This ensures the main content area takes up the remaining space */
+  flex: 1;
 }
 
 .main-left-block {
-  flex: 6; /* Take 1 part out of 4 (1:3 proportion) */
-  background-color: #21262D; /* Adjust background color as needed */
-  padding-left: 10px; /* Adjust padding as needed */
+  flex: 6;
+  background-color: #21262D;
+  padding-left: 10px;
+}
+
+.main-left-block-absent {
+    display: none;
 }
 
 .main-list-item {
